UI: New campaign selection screen

--- a/src/main/resources/settings.json
+++ b/src/main/resources/settings.json
@@ -4,5 +4,8 @@
         "width": 1280,
         "height": 720,
         "fullscreen": false
+    },
+    "maps": {
+        "campaignLength": 5
     }
 }
